# fdd

./: .gitignore  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_mvp_schema.py
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: health.py
backend/app/common/: enums.py
backend/app/common/errors/: http.py
backend/app/common/schemas/: health.py
backend/app/core/: config.py
backend/app/db/: base.py  mixins.py  session.py
backend/app/domains/auth/: router.py  schemas.py  service.py
backend/app/domains/documents/: docx_export_service.py  docx_mapping.py  fdd_generation_service.py  fdd_sections.py  llm_adapter.py  models.py  repository.py  router.py  schemas.py  section_generation.py  service.py
backend/app/domains/exports/: router.py  schemas.py  service.py
backend/app/domains/fdds/: router.py  schemas.py  service.py
backend/app/domains/organizations/: models.py
backend/app/domains/projects/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/requirements/: importer.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/solutions/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/templates/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/users/: models.py
backend/tests/unit/: test_documents_docx_export.py  test_documents_service.py  test_health.py  test_requirements_import.py  test_solutions_service.py
frontend/: package.json  (+1 more)
(+40 files in other folders)
